out/SlickParser.js
"use strict";
// Generated from Slick.g4 by ANTLR 4.6-SNAPSHOT
var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
    return c > 3 && r && Object.defineProperty(target, key, r), r;
};
Object.defineProperty(exports, "__esModule", { value: true });
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const Decorators_1 = require("antlr4ts/Decorators");
const Decorators_2 = require("antlr4ts/Decorators");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const RuleVersion_1 = require("antlr4ts/RuleVersion");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class SlickParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(SlickParser._ATN, this);
    }
    get vocabulary() {
        return SlickParser.VOCABULARY;
    }
    get grammarFileName() { return "Slick.g4"; }
    get ruleNames() { return SlickParser.ruleNames; }
    get serializedATN() { return SlickParser._serializedATN; }
    doc() {
        let _localctx = new DocContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, SlickParser.RULE_doc);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 36;
                this.proof();
                this.state = 42;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === SlickParser.T__0) {
                    {
                        {
                            this.state = 37;
                            this.sep();
                            this.state = 38;
                            this.proof();
                        }
                    }
                    this.state = 44;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    proof() {
        let _localctx = new ProofContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, SlickParser.RULE_proof);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 46;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === SlickParser.T__1) {
                    {
                        this.state = 45;
                        this.header();
                    }
                }
                this.state = 48;
                this.step();
                this.state = 54;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (SlickParser.RELOP - 30)) | (1 << (SlickParser.IMPOP - 30)) | (1 << (SlickParser.EQOP - 30)))) !== 0)) {
                    {
                        {
                            this.state = 49;
                            this.hint();
                            this.state = 50;
                            this.step();
                        }
                    }
                    this.state = 56;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 58;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === SlickParser.END) {
                    {
                        this.state = 57;
                        this.match(SlickParser.END);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    sep() {
        let _localctx = new SepContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, SlickParser.RULE_sep);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 60;
                this.match(SlickParser.T__0);
                this.state = 61;
                this.match(SlickParser.T__0);
                this.state = 62;
                this.match(SlickParser.T__0);
                this.state = 64;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 63;
                            this.match(SlickParser.T__0);
                        }
                    }
                    this.state = 66;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while (_la === SlickParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    header() {
        let _localctx = new HeaderContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, SlickParser.RULE_header);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 68;
                this.theorem();
                this.state = 70;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === SlickParser.T__2) {
                    {
                        this.state = 69;
                        this.method();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    theorem() {
        let _localctx = new TheoremContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, SlickParser.RULE_theorem);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 72;
                this.match(SlickParser.T__1);
                this.state = 73;
                this.match(SlickParser.RULENUM);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    method() {
        let _localctx = new MethodContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, SlickParser.RULE_method);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 75;
                this.match(SlickParser.T__2);
                this.state = 76;
                this.methodName();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    methodName() {
        let _localctx = new MethodNameContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, SlickParser.RULE_methodName);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 78;
                _la = this._input.LA(1);
                if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SlickParser.T__3) | (1 << SlickParser.T__4) | (1 << SlickParser.T__5) | (1 << SlickParser.T__6))) !== 0))) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    step() {
        let _localctx = new StepContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, SlickParser.RULE_step);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 80;
                this.expr(0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    expr(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new ExprContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 16;
        this.enterRecursionRule(_localctx, 16, SlickParser.RULE_expr, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 98;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                    case 1:
                        {
                            _localctx = new FunctionCallExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 83;
                            this.functionCall();
                        }
                        break;
                    case 2:
                        {
                            _localctx = new UnaryPrefixExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 84;
                            this.match(SlickParser.T__11);
                            this.state = 85;
                            this.expr(16);
                        }
                        break;
                    case 3:
                        {
                            _localctx = new AtomContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 86;
                            this.match(SlickParser.EVAR);
                        }
                        break;
                    case 4:
                        {
                            _localctx = new AtomContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 87;
                            this.match(SlickParser.VAR);
                        }
                        break;
                    case 5:
                        {
                            _localctx = new AtomContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 88;
                            this.match(SlickParser.T__13);
                        }
                        break;
                    case 6:
                        {
                            _localctx = new AtomContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 89;
                            this.match(SlickParser.T__14);
                        }
                        break;
                    case 7:
                        {
                            _localctx = new AtomContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 90;
                            this.match(SlickParser.NUM);
                        }
                        break;
                    case 8:
                        {
                            _localctx = new QuantExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 91;
                            this.quantifiedExpr();
                        }
                        break;
                    case 9:
                        {
                            _localctx = new SetEnumExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 92;
                            this.setEnumeration();
                        }
                        break;
                    case 10:
                        {
                            _localctx = new SetCompExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 93;
                            this.setComprehension();
                        }
                        break;
                    case 11:
                        {
                            _localctx = new ParenExprContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 94;
                            this.match(SlickParser.T__15);
                            this.state = 95;
                            this.expr(0);
                            this.state = 96;
                            this.match(SlickParser.T__16);
                        }
                        break;
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 134;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null)
                            this.triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            this.state = 132;
                            this._errHandler.sync(this);
                            switch (this.interpreter.adaptivePredict(this._input, 7, this._ctx)) {
                                case 1:
                                    {
                                        _localctx = new AdditionExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 100;
                                        if (!(this.precpred(this._ctx, 15)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 15)");
                                        this.state = 101;
                                        this.match(SlickParser.ADDOP);
                                        this.state = 102;
                                        this.expr(16);
                                    }
                                    break;
                                case 2:
                                    {
                                        _localctx = new GeneralExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 103;
                                        if (!(this.precpred(this._ctx, 14)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 14)");
                                        this.state = 104;
                                        this.match(SlickParser.T__12);
                                        this.state = 105;
                                        this.expr(15);
                                    }
                                    break;
                                case 3:
                                    {
                                        _localctx = new RelativeExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 106;
                                        if (!(this.precpred(this._ctx, 13)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 13)");
                                        this.state = 107;
                                        this.match(SlickParser.RELOP);
                                        this.state = 108;
                                        this.expr(14);
                                    }
                                    break;
                                case 4:
                                    {
                                        _localctx = new JunctionExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 109;
                                        if (!(this.precpred(this._ctx, 12)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 12)");
                                        this.state = 110;
                                        this.match(SlickParser.JOP);
                                        this.state = 111;
                                        this.expr(13);
                                    }
                                    break;
                                case 5:
                                    {
                                        _localctx = new ImplicationExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 112;
                                        if (!(this.precpred(this._ctx, 11)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
                                        this.state = 113;
                                        this.match(SlickParser.IMPOP);
                                        this.state = 114;
                                        this.expr(12);
                                    }
                                    break;
                                case 6:
                                    {
                                        _localctx = new EquivalenceExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 115;
                                        if (!(this.precpred(this._ctx, 10)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
                                        this.state = 116;
                                        this.match(SlickParser.EQOP);
                                        this.state = 117;
                                        this.expr(11);
                                    }
                                    break;
                                case 7:
                                    {
                                        _localctx = new TSExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 118;
                                        if (!(this.precpred(this._ctx, 19)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 19)");
                                        this.state = 119;
                                        this.match(SlickParser.T__7);
                                        this.state = 120;
                                        this.varlist();
                                        this.state = 121;
                                        this.match(SlickParser.T__8);
                                        this.state = 122;
                                        this.exprlist();
                                        this.state = 123;
                                        this.match(SlickParser.T__9);
                                    }
                                    break;
                                case 8:
                                    {
                                        _localctx = new LeibnizExprContext(new ExprContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, SlickParser.RULE_expr);
                                        this.state = 125;
                                        if (!(this.precpred(this._ctx, 18)))
                                            throw new FailedPredicateException_1.FailedPredicateException(this, "this.precpred(this._ctx, 18)");
                                        this.state = 126;
                                        this.match(SlickParser.T__7);
                                        this.state = 127;
                                        this.match(SlickParser.VAR);
                                        this.state = 128;
                                        this.match(SlickParser.T__10);
                                        this.state = 129;
                                        this.expr(0);
                                        this.state = 130;
                                        this.match(SlickParser.T__9);
                                    }
                                    break;
                            }
                        }
                    }
                    this.state = 136;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }
    hint() {
        let _localctx = new HintContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, SlickParser.RULE_hint);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 137;
                this.hintOp();
                this.state = 138;
                this.match(SlickParser.COMMENT);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    hintOp() {
        let _localctx = new HintOpContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, SlickParser.RULE_hintOp);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 140;
                _la = this._input.LA(1);
                if (!(((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (SlickParser.RELOP - 30)) | (1 << (SlickParser.IMPOP - 30)) | (1 << (SlickParser.EQOP - 30)))) !== 0))) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    varlist() {
        let _localctx = new VarlistContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, SlickParser.RULE_varlist);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 142;
                this.typedVar();
                this.state = 147;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === SlickParser.T__10) {
                    {
                        {
                            this.state = 143;
                            this.match(SlickParser.T__10);
                            this.state = 144;
                            this.typedVar();
                        }
                    }
                    this.state = 149;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    exprlist() {
        let _localctx = new ExprlistContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, SlickParser.RULE_exprlist);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 150;
                this.expr(0);
                this.state = 155;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === SlickParser.T__10) {
                    {
                        {
                            this.state = 151;
                            this.match(SlickParser.T__10);
                            this.state = 152;
                            this.expr(0);
                        }
                    }
                    this.state = 157;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    quantifiedExpr() {
        let _localctx = new QuantifiedExprContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, SlickParser.RULE_quantifiedExpr);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 158;
                this.match(SlickParser.T__15);
                this.state = 159;
                this.match(SlickParser.QUANTIFIER);
                this.state = 160;
                this.varlist();
                this.state = 161;
                this.match(SlickParser.T__17);
                this.state = 162;
                this.expr(0);
                this.state = 163;
                this.match(SlickParser.T__18);
                this.state = 164;
                this.expr(0);
                this.state = 165;
                this.match(SlickParser.T__16);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    setEnumeration() {
        let _localctx = new SetEnumerationContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, SlickParser.RULE_setEnumeration);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 167;
                this.match(SlickParser.T__19);
                this.state = 176;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SlickParser.T__11) | (1 << SlickParser.T__13) | (1 << SlickParser.T__14) | (1 << SlickParser.T__15) | (1 << SlickParser.T__19) | (1 << SlickParser.EVAR) | (1 << SlickParser.VAR) | (1 << SlickParser.NUM))) !== 0)) {
                    {
                        this.state = 168;
                        this.expr(0);
                        this.state = 173;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === SlickParser.T__10) {
                            {
                                {
                                    this.state = 169;
                                    this.match(SlickParser.T__10);
                                    this.state = 170;
                                    this.expr(0);
                                }
                            }
                            this.state = 175;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 178;
                this.match(SlickParser.T__20);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    setComprehension() {
        let _localctx = new SetComprehensionContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, SlickParser.RULE_setComprehension);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 180;
                this.match(SlickParser.T__19);
                this.state = 181;
                this.typedVar();
                this.state = 182;
                this.match(SlickParser.T__17);
                this.state = 183;
                this.expr(0);
                this.state = 184;
                this.match(SlickParser.T__18);
                this.state = 185;
                this.expr(0);
                this.state = 186;
                this.match(SlickParser.T__20);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    functionCall() {
        let _localctx = new FunctionCallContext(this._ctx, this.state);
        this.enterRule(_localctx, 32, SlickParser.RULE_functionCall);
        try {
            this.state = 196;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 13, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 188;
                        this.match(SlickParser.VAR);
                        this.state = 189;
                        this.match(SlickParser.T__21);
                        this.state = 190;
                        this.expr(0);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 191;
                        this.match(SlickParser.VAR);
                        this.state = 192;
                        this.match(SlickParser.T__15);
                        this.state = 193;
                        this.expr(0);
                        this.state = 194;
                        this.match(SlickParser.T__16);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    typedVar() {
        let _localctx = new TypedVarContext(this._ctx, this.state);
        this.enterRule(_localctx, 34, SlickParser.RULE_typedVar);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 198;
                this.match(SlickParser.VAR);
                this.state = 201;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === SlickParser.T__18) {
                    {
